[tool.poetry]
name = "test"
version = "0.1.0"
description = "test env"
authors = ["Tjark Ziehm <tjark.ziehm@ohioh.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.10.0"
sphinx = "^5.3.0"
pennylane = "^0.26.0"
pennylane-lightning = "^0.26.1"
pennylane-sf = "^0.20.1"
autograd = "^1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
